# Tagging_Automation

./: README.md  pyproject.toml  requirements.txt  run.py
config/: tagging_rules.yml
docs/: WORKFLOW.md
notebooks/: Tagging_Automation_Translation.ipynb  Tagging_Automation_Translation_v2.ipynb  tagging_notebook.ipynb
outputs/: __init__.py  cli.py  core.py
tests/: test_core.py
